ADD contact section

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,11 +1,9 @@
 $color-light: #fff;
 $color-dark: black;
-$color-success: #26de81;
-$color-warning: #e1644e;
-$color-favorite: #ff8c00;
 
-
-$font-text: 'Poppins', sans-serif;
+$color-navbar: #400E32;
+$color-section-purple: #C10FD4;
+$font-text: bc-alphapipe, sans-serif;
 
 $radius: 5px;
 $base-size: 12px;
